--- a/backend/editCate.html
+++ b/backend/editCate.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin AlphaShop</title>
-    <link rel="favicon" href="../frontend/img/core-img/logo.png" >
+    <link rel="favicon" href="../frontend/img/core-img/logo.png">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css'>
     <link rel='stylesheet'
         href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/font/material-design-icons/Material-Design-Icons.woff'>
@@ -43,10 +43,7 @@
                     <div id="dash_products_body" class="collapsible-body">
                         <ul>
                             <li id="products_product">
-                                <a class="waves-effect" style="text-decoration: none;" href="#">List Product</a>
-                            </li>
-                            <li id="products_product">
-                                <a class="waves-effect" style="text-decoration: none;" href="addProduct.html">Add Product</a>
+                                <a class="waves-effect" style="text-decoration: none;" href="#">Add Product</a>
                             </li>
                         </ul>
                     </div>
@@ -57,10 +54,7 @@
                     <div id="dash_categories_body" class="collapsible-body">
                         <ul>
                             <li id="categories_category">
-                                <a class="waves-effect" style="text-decoration: none;" href="listCate.html">List Category</a>
-                            </li>
-                            <li id="categories_category">
-                                <a class="waves-effect" style="text-decoration: none;" href="addCate.html">Add Category</a>
+                                <a class="waves-effect" style="text-decoration: none;" href="#">Add Category</a>
                             </li>
 
                         </ul>
@@ -95,36 +89,37 @@
 
             <nav>
                 <div class="nav-wrapper indigo darken-2">
+                    <a style="margin-left: 20px;" class="breadcrumb" href="index.html">List</a>
+
                     <div style="margin-right: 20px;" id="timestamp" class="right"></div>
                 </div>
             </nav>
         </header>
 
-<main>
-    <div class="container">
-        <h4 class="name-page">List Product</h4>
-    <a class="btnEdit btn btn-primary btn-sm" href="addProduct.html" >Add Product</a>
-    <p></p>
-    <table id="tableProducts" class="table table-bordered">
-        <thead>
-            <tr>
-                <th style="width: 10%;">ID</th>
-                <th style="width: 30%;">Product Name</th>
-                <th style="width: 10%;">Category</th>
-                <th style="width: 10%;">Price</th>
-                <th style="width: 15%;">Image</th>
-                <th style="width: 25%;">Description</th>
-            </tr>
-        </thead>
-        <tbody>
+        <main>
+            <div class="container">
+                <h4 class="name-page">Edit Category</h4>
+                <div class="modal-body">
+                    <form class="addForm-category" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <h4 class="form-title">Name category</h4>
+                            <input type="text" class="form-control" name="cateName"
+                                placeholder="Please enter name category">
+                        </div>
+                        <div class="form-group">
+                            <h4 class="form-title">Category Description</h4>
+                            <input type="text" class="form-control" name="cateDesc"
+                                placeholder="Please enter category description ">
+                        </div>
+                        <br> <br> <br>
+                        <button type="submit" class="btn amber accent-4">Edit</button>
+                    </form>
+                </div>
+            </div>
 
-        </tbody>
-    </table>
+        </main>
 
-</div>
-        </main> 
-
-       <footer class="indigo page-footer">
+        <footer class="indigo page-footer">
             <div class="container">
                 <div class="row">
                     <div class="col s12">
@@ -150,7 +145,7 @@
                             target="_blank">Tirth Patel</a></span>
                 </div>
             </div>
-        </footer> 
+        </footer>
     </body>
 
 </html>
